fixed spacing for login pages in body header

--- a/apparelrow/static/less/base.less
+++ b/apparelrow/static/less/base.less
@@ -109,6 +109,7 @@
 // Facebook button
 .btn-facebook {
     .button-variant(#ffffff, @brand-facebook, @brand-facebook);
+    margin-bottom: 10px;
     .btn-facebook-icon {
         display: inline-block;
         width: 16px;
@@ -231,7 +232,7 @@ body.dashboard-info .body-header {
     .make-row;
     margin-left: 0;
     margin-right: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     margin-top: 20px;
     border-bottom: 3px solid #000000;
     @media (min-width: @grid-float-breakpoint) {
